<resources>
    <string name="app_name">My Files</string>

    <string name="fileList_Name_A_to_Z">Name (A to Z)</string>
    <string name="fileList_Name_Z_to_A">Name (Z to A)</string>
    <string name="fileList_Size_small_to_large">Size (small to large)</string>
    <string name="fileList_Size_large_to_small">Size (large to small)</string>
    <string name="fileList_Date_old_to_new">Date (old to new)</string>
    <string name="fileList_Date_new_to_old">Date (new to old)</string>

    <string name="fileInfo_Date_Modified">Date Modified : %s</string>
    <string name="fileInfo_Date_Added">Date added : %s</string>

    <string name="share_to">Share to &#8230;</string>
    <string name="share">Share</string>

    <string name="open_with">Open with &#8230;</string>

    <string name="file_menu_select">Select</string>
    <string name="file_menu_select_all">Select All</string>
    <string name="file_menu_select_toggle">Select Invert</string>
    <string name="file_menu_share">Share</string>
    <string name="file_menu_open_with">Open with</string>
    <string name="file_menu_move_to">Move to</string>
    <string name="file_menu_copy_to">Copy to</string>
    <string name="file_menu_rename">Rename</string>
    <string name="file_menu_delete">Delete</string>
    <string name="file_menu_info">Information</string>
    <string name="file_menu_create_folder">Create New Folder</string>

    <string name="move_to_here">Move to here</string>
    <string name="copy_to_here">Copy to here</string>

    <string name="delete_title">Delete %s ?</string>
    <string name="delete_title_confirm">Confirm to delete %s ?</string>

    <string name="update">Update</string>
    <string name="sort">Sort</string>
    <string name="dfs_folder">DFS Folder</string>
    <string name="actionCreateFolder">Create Folder</string>
    <string name="folderName">Folder name</string>
    <string name="newFolder">New folder</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="items_no">No items</string>
    <string name="items">%d items</string>
    <string name="items_selected">%d items selected</string>

    <string name="storage_location">Storage location</string>
    <string name="external">External</string>
    <string name="SD_card">SD card</string>
    <string name="status_list">%d items, %d directories, %d files (%dms)</string>
    <string name="percent_size">%.2f%% %s</string>
    <string name="storageState">total: %s\nfree: %s</string>

    <!-- No translation -->
    <string name="nameAZ">nameAZ</string>
    <string name="nameZA">nameZA</string>
    <string name="size01">size01</string>
    <string name="size10">size10</string>
    <string name="date01">date01</string>
    <string name="date10">date10</string>
</resources>