<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/t10dp"
    android:background="#d000">

    <LinearLayout
        android:id="@+id/itemContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemTitle"
            style="@style/text_menu"
            android:layout_width="match_parent"
            android:text="@string/file_menu_rename"/>

        <EditText
            android:id="@+id/itemInput"
            style="@style/text_menu"
            android:hint="Enter Text"
            android:inputType="text"
            tools:text="@string/actionCreateFolder"
            android:textColor="#ddd"
            android:textColorHint="#888"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/itemOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemContent"
        android:layout_alignParentRight="true"
        android:text="@string/ok"/>

    <Button
        android:id="@+id/itemCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemContent"
        android:layout_alignTop="@id/itemOK"
        android:text="@string/cancel"/>

</RelativeLayout>